# seas8414_teach

./: .gitignore  LICENSE  README.md  pyproject.toml
src/seas8414_teach/: __init__.py  _contract.py  decide.py  figures.py  grounding.py  methods.py  provenance.py  receipt.py
src/seas8414_teach/_data/: phase09-phase10-release-cache-lock.json
src/seas8414_teach/_data/release-cache/phase09-02-sbom-graph/: osv-querybatch-86fddc20d94db67ccd774f7407d94b5b27c1ddc65411648a12a00d0cc555ad9d.json
src/seas8414_teach/_data/release-cache/phase09-03-repository-posture/: ansible__ansible.json  apache__kafka.json  apache__logging-log4j2.json  apache__spark.json  caddyserver__caddy.json  curl__curl.json  django__django.json  docker__cli.json  eclipse__paho.mqtt.python.json  envoyproxy__envoy.json  espressif__esp-idf.json  etcd-io__etcd.json  expressjs__express.json  golang__go.json  grafana__grafana.json  grpc__grpc.json  hashicorp__terraform.json  helm__helm.json  home-assistant__core.json  kubernetes__kubernetes.json  moby__moby.json  nodejs__node.json  numpy__numpy.json  openssl__openssl.json  pallets__flask.json  pandas-dev__pandas.json  prometheus__prometheus.json  pytorch__pytorch.json  rust-lang__rust.json  scikit-learn__scikit-learn.json  systemd__systemd.json  tensorflow__tensorflow.json  tiangolo__fastapi.json  torvalds__linux.json  traefik__traefik.json  zephyrproject-rtos__zephyr.json
src/seas8414_teach/projects/: __init__.py  attack.py  intrusion.py  kev.py  posture.py  sbom.py
tests/: test_bundled_data.py  test_decide.py  test_grounding.py  test_methods.py
