[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "seas8414-teach"
version = "0.1.3"
description = "A transparent teaching toolkit for the SEAS-8414 security-analytics course: short cells, visible decisions, fail-closed LLM grounding."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GWU SEAS-8414" }]
keywords = ["teaching", "security-analytics", "notebooks", "scikit-learn", "reproducible"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "networkx>=3.2",
]

[project.optional-dependencies]
# The fail-closed LLM grounding runs without a model (deterministic fallback). Install [llm]
# only to exercise the local-model path in class.
llm = ["transformers>=4.40", "torch>=2.2", "sentencepiece>=0.2"]
dev = ["pytest>=8", "build>=1.2", "twine>=5", "nbclient>=0.9", "nbformat>=5.9"]

[project.urls]
Homepage = "https://github.com/gwuml/seas8414_teach"
Repository = "https://github.com/gwuml/seas8414_teach"

[tool.hatch.build.targets.wheel]
packages = ["src/seas8414_teach"]

[tool.pytest.ini_options]
testpaths = ["tests"]
